add junit-vintage as a dependency to maven surefire